# SpottedDisksMC-GPU

./: .gitignore  CMakeLists.txt  README.md  compile.sh  generate_config.c  generate_config.h  main.c
SpottedDisksMC-GPU_square_move/: CMakeLists.txt  main.c
SpottedDisksMC-GPU_square_move/include/: square_move.h
SpottedDisksMC-GPU_square_move/src/: periodic_boundary.c  square_config.c  square_move.c
data/: data.md
data/configs/: simulation1.cfg
include/: cell_linked_algorithm.h  circle_config.h  circle_move.cuh  circle_move.h  config.h  general_config.h  generate_animation.h  generate_config.h  patch.h  periodic_boundary.h  print_error.h  shared_utilities.h  square_config.h  square_move.cuh  square_move.h
src/: cell_linked_algorithm.c  circle_config.c  circle_move.c  circle_move.cu  config.c  general_config.c  generate_animation.c  generate_config.c  patch.c  periodic_boundary.c  print_error.c  shared_utilities.c  square_config.c  square_move.c  square_move.cu
